--- a/src/main/java/com/mycompany/vb/vebo.form
+++ b/src/main/java/com/mycompany/vb/vebo.form
@@ -152,33 +152,27 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                          <Component id="PlayerAgeLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="PlayerNameLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="nameInput" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jDateChooser1" alignment="0" pref="157" max="32767" attributes="0"/>
+                      </Group>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <Component id="PlayerCountryLabel" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                              <EmptySpace pref="301" max="32767" attributes="0"/>
+                              <Component id="Save_btn" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="106" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                  <Component id="Country_Input" max="32767" attributes="0"/>
-                                  <Component id="PlayerAgeLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="PlayerNameLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="nameInput" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="jDateChooser1" alignment="0" pref="157" max="32767" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="209" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="PlayerCountryLabel" min="-2" max="-2" attributes="0"/>
+                                  <Component id="Country_Input" pref="157" max="32767" attributes="0"/>
+                                  <Component id="Number_label" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="P_Number" alignment="0" max="32767" attributes="0"/>
                               </Group>
-                              <EmptySpace pref="272" max="32767" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" alignment="1" attributes="0">
-                                      <Component id="ImgchooseBtn" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="115" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" alignment="1" attributes="0">
-                                      <Group type="103" groupAlignment="1" attributes="0">
-                                          <Component id="Save_btn" min="-2" max="-2" attributes="0"/>
-                                          <Component id="imgLabel" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace min="-2" pref="106" max="-2" attributes="0"/>
-                                  </Group>
-                              </Group>
+                              <EmptySpace max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -188,37 +182,28 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
-                      <Component id="PlayerNameLabel" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="nameInput" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
-                              <Component id="imgLabel" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="PlayerNameLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="PlayerCountryLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="nameInput" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="Country_Input" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="PlayerAgeLabel" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="PlayerAgeLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="Number_label" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jDateChooser1" min="-2" max="-2" attributes="0"/>
-                          <Component id="ImgchooseBtn" min="-2" max="-2" attributes="0"/>
+                          <Component id="P_Number" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-                      <Component id="PlayerCountryLabel" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="Country_Input" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                              <Component id="Save_btn" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
-                      <EmptySpace pref="57" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
+                      <Component id="Save_btn" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="69" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -233,9 +218,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="nameInput">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Input Name"/>
-              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nameInputActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="PlayerAgeLabel">
               <Properties>
@@ -250,22 +235,6 @@
                 <Property name="dateFormatString" type="java.lang.String" value="dd-MM-yyyy"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="imgLabel">
-              <Properties>
-                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="Image"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JButton" name="ImgchooseBtn">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Browse Img"/>
-              </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ImgchooseBtnActionPerformed"/>
-              </Events>
-            </Component>
             <Component class="javax.swing.JLabel" name="PlayerCountryLabel">
               <Properties>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -275,9 +244,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="Country_Input">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Country"/>
-              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Country_InputActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="Save_btn">
               <Properties>
@@ -285,6 +254,19 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Save_btnActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JLabel" name="Number_label">
+              <Properties>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Number"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JTextField" name="P_Number">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="P_NumberActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
